# IMMerge

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md  algorithm.md  usage.md
src/IMMerge/: __init__.py  check_r2_setting_for_imputation.py  get_SNP_list.py  merge_files.py
tests/: README.md  conftest.py  test_immerge.py
tests/fixtures/expected/: merged_sample_variants_excluded.info.txt  merged_sample_variants_retained.info.txt
