[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IMMerge"
version = "0.0.5"
description = "Merging imputation data at scale"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Wanying Zhu"}]
keywords = ["bioinformatics", "genomics", "imputation", "VCF"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3",
    "numpy",
    "xopen>=1.4,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
"Homepage" = "https://github.com/wbszhu/IMMerge"
"Paper" = "https://doi.org/10.1093/bioinformatics/btac750"
"Issues" = "https://github.com/wbszhu/IMMerge/issues"

[tool.setuptools.packages.find]
where = ["src"]
